--- a/styles.css
+++ b/styles.css
@@ -285,10 +285,21 @@ body {
   color: var(--color-light);
 }
 
+.title-big {
+  font-size: clamp(24px, 3.12vw, 60px);
+}
+
 .backdrop-title {
   position: relative;
   z-index: 2;
 }
+
+/* background text, but centered (title 'start here', background text 'Go!') */
+.backdrop-title.centered::after {
+  top: -0.55em;
+  left: 50%;
+  translate: -50%;
+} 
 
 /* this is a white cross to the left of the title */
 .backdrop-title::before {
@@ -400,6 +411,30 @@ p:not([class]):not(:last-child) {
     border-radius: 50%;
 }
 
+.input {
+  width: 100%;
+  height: var(--input-height);
+  padding-inline: 25px;
+  background-color: transparent;
+  color: var(--color-light);
+  border: 1px solid var(--color-light-gray);
+  border-radius: var(--border-radius);
+}
+
+.input::placeholder {
+  color: var(--color-light-gray);
+}
+
+.input:hover {
+  border-color: var(--color-light);
+}
+
+.input:focus {
+  color: var(--color-dark);
+  background-color: var(--color-light-gray);
+  outline: none;
+}
+
 .button {
     display: inline-flex;
     align-items: center;
@@ -426,6 +461,7 @@ p:not([class]):not(:last-child) {
   height: var(--input-height);
   padding-left: 31px;
   padding-right: 80px;
+  color: var(--color-light);
   background-color: transparent;
   border: var(--border);
 }
@@ -611,6 +647,118 @@ p:not([class]):not(:last-child) {
   font-size: 16px;
 }
 
+.join-us {
+  background-color: var(--color-dark-alternate);
+}
+
+.join-us-video-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 150px 30px;
+  background: url('./images/join-us-bg.jpg') center/cover no-repeat var(--color-dark-alternate);
+}
+
+.join-us-video-play-button {
+  position: absolute;
+  /* top: 50%;
+  left: 50%; */
+  /* translate: -50% -50%; */
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 4px;
+  width: 200px;
+  aspect-ratio: 1;
+  font-size: 14px;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: var(--color-light);
+  background-color: transparent;
+  border: var(--border);
+  border-radius: 50%;
+}
+
+.join-us-video-play-button:hover {
+  background-color: var(--color-light-gray);
+  color: var(--color-dark);
+} 
+
+.join-us-video-play-button::after {
+  content: '';
+  width: 26px;
+  aspect-ratio: 1;
+  background: url('./icons/arrow-button.svg') center/contain no-repeat;
+  transition-duration: var(--transition-duration);
+}
+
+/* using filter:invert to invert arrow color when hover */
+.join-us-video-play-button:hover::after {
+  filter: invert(1);
+}
+
+.join-us-body {
+  padding-bottom: 150px;
+}
+
+.join-us-title {
+  position: relative;
+  margin-top: -0.4em;
+  font-size: clamp(64px, 9.37vw, 180px);
+  line-height: 1;
+  text-align: center;
+}
+
+.join-us-title::after {
+  content: '';
+  display: inline-block;
+  height: 0.7em;
+  aspect-ratio: 1;
+  margin-left: 0.14em;
+  background: url('./icons/bold-arrow-down-right.svg') center/contain no-repeat;
+  scale: 1 -1; /* to mirror the arrow */
+}
+
+.join-us-title:not(:last-child) {
+  margin-bottom: 130px;
+}
+
+.join-us-form-header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  row-gap: 7px;
+}
+
+.join-us-form-header:not(:last-child) {
+  margin-bottom: 52px;
+}
+
+.join-us-form-subtitle {
+  font-size: 20px;
+  line-height: 1.65;
+  text-align: center;
+  text-transform: uppercase;
+  color: var(--color-light);
+}
+
+.join-us-form-input {
+  max-width: 400px;
+}
+
+.join-us-form-body {
+  display: flex;
+  justify-content: center;
+  column-gap: 20px;
+}
+
+.join-us-video {
+  width: 100%;
+  max-width: 960px;
+  height: auto;
+}
+
+
 @media (max-width: 1919px) {
   .motivation-card-image {
     margin-block: -20px;
@@ -648,6 +796,15 @@ p:not([class]):not(:last-child) {
     margin-block: 30%;
     height: auto;
     margin-block: 0;
+  }
+
+  .join-us-body {
+    padding-bottom: 80px;
+  }
+
+  .join-us-title:not(:last-child)
+  {
+    margin-bottom: 80px;
   }
 }
 
@@ -712,6 +869,24 @@ p:not([class]):not(:last-child) {
 
   .training-types-image {
     max-width: 120px;
+  }
+
+  .join-us-video-play-button {
+    width: 140px;
+  }
+
+  .join-us-title:not(:last-child) {
+    margin-bottom: 40px;
+  }
+
+  .join-us-form-subtitle {
+    font-size: 16px;
+  }
+
+  .join-us-form-body {
+    flex-direction: column;
+    align-items: center;
+    row-gap: 20px;
   }
 
 }
