--- a/styles.css
+++ b/styles.css
@@ -279,6 +279,11 @@ body {
     padding-inline: var(--container-padding-x);
 }
 
+.container-wide {
+  max-width: 1920px;
+  margin-inline: auto;
+}
+
 .title-medium {
   font-size: clamp(20px, 2.1vw, 40px);
   line-height: 1.3;
@@ -293,13 +298,6 @@ body {
   position: relative;
   z-index: 2;
 }
-
-/* background text, but centered (title 'start here', background text 'Go!') */
-.backdrop-title.centered::after {
-  top: -0.55em;
-  left: 50%;
-  translate: -50%;
-} 
 
 /* this is a white cross to the left of the title */
 .backdrop-title::before {
@@ -317,13 +315,21 @@ body {
   content: attr(data-title); /* using text in data-title attribute */
   position: absolute;
   z-index: -1;
-  top: -0.45em;
+  top: -0.3em;
   left: -0.6em;
   font-family: var(--font-family-accent);
   font-size: 2.8em; /* = (parent font-size) * 2.8 */
+  line-height: 1;
   color: transparent;
   -webkit-text-stroke: 1px var(--color-dark-gray); /* vendor prefix - for this property tp work in chrome */
   text-stroke: 1px var(--color-dark-gray);
+}
+
+/* transparent background text, but centered (title 'start here', background text 'Go!') */
+.backdrop-title.centered::after {
+  top: -0.25em;
+  left: 50%;
+  translate: -50%;
 }
 
 /* overwrite these rules with !important - just in case */
@@ -619,8 +625,6 @@ p:not([class]):not(:last-child) {
 
 .training-types {
   position: relative;
-  max-width: 1920px;
-  margin-inline: auto;
   padding-top: 70px;
   padding-bottom: 120px;
   background-color: var(--color-dark);
@@ -758,6 +762,35 @@ p:not([class]):not(:last-child) {
   height: auto;
 }
 
+.location {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.location-body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 80px 15px;
+  text-align: center;
+}
+
+.location-description {
+  max-width: 490px;
+}
+
+.location-title:not(:last-child) {
+  margin-bottom: 14px;
+}
+
+.location-description:not(:last-child) {
+  margin-bottom: 37px;
+}
+
+.location-map-image {
+  height: auto;
+}
 
 @media (max-width: 1919px) {
   .motivation-card-image {
@@ -805,6 +838,11 @@ p:not([class]):not(:last-child) {
   .join-us-title:not(:last-child)
   {
     margin-bottom: 80px;
+  }
+
+  .location {
+    display: flex;
+    flex-direction: column-reverse;
   }
 }
 
@@ -887,6 +925,14 @@ p:not([class]):not(:last-child) {
     flex-direction: column;
     align-items: center;
     row-gap: 20px;
+  }
+
+  .location-body {
+    padding-block: 40px;
+  }
+
+  .location-description:not(:last-child) {
+    margin-bottom: 20px;
   }
 
 }
