--- a/styles.css
+++ b/styles.css
@@ -272,6 +272,7 @@ body {
     background-color: var(--color-dark);
 }
 
+/* --- утилитарные классы --- */
 /* so the container actual width equal to 1300px (--container-width) */
 .container {
     max-width: calc(var(--container-width) + var(--container-padding-x) * 2);
@@ -292,6 +293,14 @@ body {
 
 .title-big {
   font-size: clamp(24px, 3.12vw, 60px);
+}
+
+.section-description {
+  font-size: 20px;
+  line-height: 1.65;
+  text-align: center;
+  text-transform: uppercase;
+  color: var(--color-light);
 }
 
 .backdrop-title {
@@ -738,14 +747,6 @@ p:not([class]):not(:last-child) {
   margin-bottom: 52px;
 }
 
-.join-us-form-subtitle {
-  font-size: 20px;
-  line-height: 1.65;
-  text-align: center;
-  text-transform: uppercase;
-  color: var(--color-light);
-}
-
 .join-us-form-input {
   max-width: 400px;
 }
@@ -790,6 +791,33 @@ p:not([class]):not(:last-child) {
 
 .location-map-image {
   height: auto;
+}
+
+.family {
+  background-color: var(--color-dark-alternate);
+}
+
+.family-header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  row-gap: 7px;
+  padding-top: 132px;
+  padding-bottom: 62px;
+  text-align: center;
+}
+
+.family-body {
+  display: flex;
+  justify-content: center;
+  column-gap: 26px;
+  /* these two properties add a slider behavior */
+  scroll-snap-type: mandatory x;
+  overflow-x: scroll;
+}
+
+.family-image {
+  scroll-snap-align: start;
 }
 
 @media (max-width: 1919px) {
@@ -843,6 +871,10 @@ p:not([class]):not(:last-child) {
   .location {
     display: flex;
     flex-direction: column-reverse;
+  }
+
+  .family-image {
+    height: 360px;
   }
 }
 
@@ -917,10 +949,6 @@ p:not([class]):not(:last-child) {
     margin-bottom: 40px;
   }
 
-  .join-us-form-subtitle {
-    font-size: 16px;
-  }
-
   .join-us-form-body {
     flex-direction: column;
     align-items: center;
@@ -933,6 +961,23 @@ p:not([class]):not(:last-child) {
 
   .location-description:not(:last-child) {
     margin-bottom: 20px;
+  }
+
+  .section-description {
+    font-size: 16px;
+  }
+
+  .family-image {
+    height: 180px;
+  }
+
+  .family-header {
+    padding-top: 80px;
+    padding-bottom: 50px;
+  }
+
+  .family-body {
+    column-gap: 12px;
   }
 
 }
