--- a/styles.css
+++ b/styles.css
@@ -262,6 +262,9 @@ svg * {
     --header-height: 90px;
 }
 
+svg *[fill] {fill: currentColor}
+svg *[stroke] {stroke: currentColor}
+
 /* basic styles used in the page -> to 'body' selector */
 body {
     font-family: var(--font-family-base);
@@ -960,7 +963,118 @@ select.input:invalid {
 .calculate-table tfoot td {
   padding-top: 33px;
   padding-bottom: 0;
-} 
+}
+
+.footer {
+  --footerLogoWidth: 20.77%;
+}
+
+.footer-description {
+  text-align: left;
+}
+
+.footer-main {
+  padding-top: 140px;
+  padding-bottom: 160px;
+}
+
+.footer-extra {
+  padding-block: 15px;
+  background-color: var(--color-dark-alternate);
+}
+
+/* set the first columns to equal size 20.77% */
+.footer-header,
+.footer-body {
+  display: grid;
+}
+
+.footer-header {
+  grid-template-columns: var(--footerLogoWidth) auto;
+}
+
+.footer-header:not(:last-child) {
+  margin-bottom: 60px;
+}
+
+.footer-body {
+  grid-template-columns: var(--footerLogoWidth) repeat(3, 1fr);
+}
+
+.footer-column-title {
+  font-size: clamp(18px, 1.15vw, 22px);
+}
+
+.footer-column-title:not(:last-child) {
+  margin-bottom: 15px;
+}
+
+/* arrow element */
+/* TODO without 'with-arrow' class?? first-child */
+.footer-column-title.with-arrow::after {
+  content: '';
+  display: inline-block;
+  height: 0.74em;
+  aspect-ratio: 1;
+  margin-left: 0.5em;
+  background: url('./icons/bold-arrow-down-right.svg') center/contain no-repeat;
+  scale: -1 1; /* to mirror the arrow */
+}
+
+.footer-schedule:not(:last-child) {
+  margin-bottom: 13px;
+}
+
+.footer-address {
+  font-style: normal;
+}
+
+.footer-address:not(:last-child) {
+  margin-bottom: 35px;
+}
+
+.footer-subscribe {
+  position: relative;
+}
+
+.footer-subscribe:not(:last-child) {
+  margin-bottom: 50px;
+}
+
+.footer-subscribe-input {
+  padding-right: 70px;
+}
+
+.footer-subscribe-button {
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 100%;
+  aspect-ratio: 1;
+  /* background-color: transparent; */
+  background: url('./icons/arrow-button.svg') center/70% no-repeat;
+  border: var(--border);
+  border-radius: 50%;
+}
+
+.footer-subscribe-button:hover {
+  background-color: var(--color-light-gray);
+}
+
+.footer-soc1al-list {
+  display: flex;
+  column-gap: 18px;
+}
+
+.footer-soc1al-link {
+  display: flex;
+  width: 23px;
+}
+
+.footer-copyright {
+  font-size: 14px;
+}
+
 
 @media (max-width: 1919px) {
   .motivation-card-image {
