--- a/styles.css
+++ b/styles.css
@@ -1075,6 +1075,10 @@ select.input:invalid {
   font-size: 14px;
 }
 
+.footer-logo-image {
+  height: auto;
+}
+
 
 @media (max-width: 1919px) {
   .motivation-card-image {
@@ -1155,6 +1159,22 @@ select.input:invalid {
 
   .calculate-table tfoot td {
     padding-top: 10px;
+  }
+
+  .footer-main {
+    padding-top: 80px;
+    padding-bottom: 50px;
+  }
+
+  .footer-header {
+    display: flex;
+    flex-direction: column;
+    row-gap: 30px;
+  }
+
+  .footer-body {
+    grid-template-columns: repeat(2, 1fr);
+    row-gap: 30px;
   }
 }
 
@@ -1271,6 +1291,22 @@ select.input:invalid {
 
   .calculate-table-wrapper::before {
     display: none;
+  }
+
+  .footer-body {
+    grid-template-columns: 1fr;
+  }
+
+  .footer-main {
+    padding-top: 50px;
+  }
+
+  .footer-header:not(:last-child) {
+    margin-bottom: 30px;
+  }
+
+  .footer-subscribe:not(:last-child) {
+    margin-bottom: 40px;
   }
 
 }
